# digital_twin

./: .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  prometheus.yml  pyproject.toml
src/: config.py  main.py  metrics.py  prompts.py  translations.py  ui.py
src/digital_twin/: config.py  main.py  prompt.py  prompts.py  rag.py  texts.py  translations.py  ui.py  vector_store.py
src/static/: styles.css
terraform/: .terraform.lock.hcl  dashboard.tf  provider.tf  variables.tf  versions.tf
terraform/dashboards/: dashboard.json
tests/: test_config.py  test_pdf_loader.py  test_rag.py  test_vector_store.py
